fix: edit the translate functionality to check whitespaces, add max length for input word and add flex wrap for sign boxes

--- a/src/components/styles/Profile.css
+++ b/src/components/styles/Profile.css
@@ -26,6 +26,7 @@
 
 .single-translation {
     display: flex;
+    flex-wrap: wrap;
     border: 1px solid black;
     border-radius: 10px;
     margin: 10px 130px 10px 130px;
@@ -50,4 +51,8 @@ p {
     margin-top: 40px;
     margin-bottom: 40px;
     font-weight: bold;
+}
+
+.whitespace {
+    margin-left: 30px;
 }
